--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dependencies": {
         "@hookform/resolvers": "^3.3.4",
         "@radix-ui/react-dialog": "^1.0.5",
-        "@radix-ui/react-dropdown-menu": "^2.0.6",
+        "@radix-ui/react-dropdown-menu": "^2.1.6",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-popover": "^1.0.7",
@@ -26,6 +26,7 @@
         "clsx": "^2.1.0",
         "cmdk": "^1.0.0",
         "express": "^4.21.2",
+        "formidable": "^3.5.2",
         "luxon": "^3.4.4",
         "minisearch": "^6.3.0",
         "mongoose": "^8.3.5",
@@ -49,6 +50,7 @@
     },
     "devDependencies": {
         "@types/express": "^5.0.1",
+        "@types/formidable": "^3.4.5",
         "@types/luxon": "^3.4.2",
         "@types/node": "^20",
         "@types/react": "^18",
