--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-MONGODB_URI = "mongodb+srv://kenilk677:KgbYiGyRpp7HS4cB@cluster0.lziadv4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+# MONGODB_URI = "mongodb+srv://kenilk677:KgbYiGyRpp7HS4cB@cluster0.lziadv4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+
+MONGODB_URI = "mongodb://localhost:27017/skillswap"
 GOOGLE_CLIENT_ID=467168292559-ieparn20fdsjejr6m3vpaflful5il7hs.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_URL=http://localhost:3000
