--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "prettier": "^3.2.5",
         "prettier-plugin-tailwindcss": "^0.5.13",
         "tailwindcss": "^3.4.1",
+        "ts-node": "^10.9.2",
         "typescript": "^5.8.2"
     },
     "pnpm": {
