--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev --",
-        "build": "next build",
+        "dev": "next dev --turbopack",
+        "build": "next build --turbopack",
         "start": "next start",
         "lint": "next lint",
         "add": "npx shadcn-ui@latest add",
@@ -22,6 +22,7 @@
         "@reduxjs/toolkit": "^2.6.1",
         "argon2": "^0.40.1",
         "axios": "^1.8.4",
+        "bcryptjs": "^3.0.2",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
         "cmdk": "^1.0.0",
@@ -30,11 +31,12 @@
         "luxon": "^3.4.4",
         "minisearch": "^6.3.0",
         "mongoose": "^8.3.5",
-        "next": "14.2.0",
+        "next": "^15.3.2",
+        "next-auth": "^4.24.11",
         "next-nprogress-bar": "^2.3.11",
         "next-themes": "^0.3.0",
-        "react": "^18",
-        "react-dom": "^18",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
         "react-hook-form": "^7.51.3",
         "react-icons": "^5.0.1",
         "react-redux": "^9.2.0",
@@ -44,6 +46,7 @@
         "swr": "^2.3.3",
         "tailwind-merge": "^2.2.2",
         "tailwindcss-animate": "^1.0.7",
+        "turbopack": "^0.0.1",
         "uuid": "^9.0.1",
         "valtio": "^1.13.2",
         "zod": "^3.22.5"
@@ -53,12 +56,12 @@
         "@types/formidable": "^3.4.5",
         "@types/luxon": "^3.4.2",
         "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
+        "@types/react": "^19.1.4",
+        "@types/react-dom": "^19.1.5",
         "@types/socket.io": "^3.0.1",
         "@types/uuid": "^9.0.8",
         "eslint": "^8",
-        "eslint-config-next": "14.2.0",
+        "eslint-config-next": "^15.3.2",
         "postcss": "^8",
         "prettier": "^3.2.5",
         "prettier-plugin-tailwindcss": "^0.5.13",
