--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "@types/uuid": "^9.0.8",
         "eslint": "^8",
         "eslint-config-next": "^15.3.2",
+        "nodemon": "^3.1.10",
         "postcss": "^8",
         "prettier": "^3.2.5",
         "prettier-plugin-tailwindcss": "^0.5.13",
