Update package dependencies, enhance error handling in data fetching, and improve UI components. Added framer-motion and lucide-react packages. Refactored loading and profile components for better user experience. Enhanced post creation form with loading state and improved styling for better accessibility.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "cmdk": "^1.0.0",
         "express": "^4.21.2",
         "formidable": "^3.5.2",
+        "framer-motion": "^12.14.0",
+        "lucide-react": "^0.511.0",
         "luxon": "^3.4.4",
         "minisearch": "^6.3.0",
         "mongoose": "^8.3.5",
