--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^3.3.4",
+        "@radix-ui/react-avatar": "^1.1.10",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-dropdown-menu": "^2.1.6",
         "@radix-ui/react-icons": "^1.3.2",
@@ -19,14 +20,16 @@
         "@radix-ui/react-popover": "^1.0.7",
         "@radix-ui/react-select": "^2.0.0",
         "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-toast": "^1.2.14",
         "@radix-ui/react-tooltip": "^1.2.6",
         "@reduxjs/toolkit": "^2.6.1",
         "argon2": "^0.40.1",
         "axios": "^1.8.4",
         "bcryptjs": "^3.0.2",
-        "class-variance-authority": "^0.7.0",
-        "clsx": "^2.1.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "cmdk": "^1.0.0",
+        "date-fns": "^4.1.0",
         "express": "^4.21.2",
         "formidable": "^3.5.2",
         "framer-motion": "^12.14.0",
@@ -47,7 +50,7 @@
         "socket.io-client": "^4.8.1",
         "sonner": "^1.4.41",
         "swr": "^2.3.3",
-        "tailwind-merge": "^2.2.2",
+        "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7",
         "turbopack": "^0.0.1",
         "uuid": "^9.0.1",
