--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "format": "npx prettier --write ."
     },
     "dependencies": {
+        "@headlessui/react": "^2.2.4",
         "@hookform/resolvers": "^3.3.4",
         "@radix-ui/react-avatar": "^1.1.10",
         "@radix-ui/react-dialog": "^1.0.5",
