--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-popover": "^1.0.7",
         "@radix-ui/react-select": "^2.0.0",
-        "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-switch": "^1.2.5",
         "@radix-ui/react-toast": "^1.2.14",
         "@radix-ui/react-tooltip": "^1.2.6",
         "@reduxjs/toolkit": "^2.6.1",
+        "@types/nodemailer": "^6.4.17",
         "argon2": "^0.40.1",
         "axios": "^1.8.4",
         "bcryptjs": "^3.0.2",
@@ -42,6 +44,7 @@
         "next-auth": "^4.24.11",
         "next-nprogress-bar": "^2.3.11",
         "next-themes": "^0.3.0",
+        "nodemailer": "^6.10.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.51.3",
