--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
         "@types/react-dom": "^19.1.5",
         "@types/socket.io": "^3.0.1",
         "@types/uuid": "^9.0.8",
+        "@typescript-eslint/eslint-plugin": "^8.33.0",
+        "@typescript-eslint/parser": "^8.33.0",
         "concurrently": "^8.2.2",
         "eslint": "^8",
         "eslint-config-next": "^15.3.2",
