--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@radix-ui/react-toast": "^1.2.14",
         "@radix-ui/react-tooltip": "^1.2.6",
         "@reduxjs/toolkit": "^2.6.1",
+        "@types/dotenv": "^6.1.1",
         "@types/nodemailer": "^6.4.17",
         "argon2": "^0.40.1",
         "axios": "^1.8.4",
@@ -36,6 +37,7 @@
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
         "date-fns": "^4.1.0",
+        "dotenv": "^16.5.0",
         "express": "^4.21.2",
         "formidable": "^3.5.2",
         "framer-motion": "^12.14.0",
