--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "add": "npx shadcn-ui@latest add",
         "format": "npx prettier --write .",
         "socket": "ts-node server.ts",
+        "server": "ts-node server/index.ts",
         "dev:all": "concurrently \"npm run dev\" \"npm run socket\""
     },
     "dependencies": {
