Refactor user model and store to use IUserClient interface for better type safety

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "dev:all": "concurrently \"npm run dev\" \"npm run socket\""
     },
     "dependencies": {
+        "@eslint/config-array": "^0.20.0",
+        "@eslint/object-schema": "^2.1.6",
         "@headlessui/react": "^2.2.4",
         "@hookform/resolvers": "^3.3.4",
         "@radix-ui/react-avatar": "^1.1.10",
@@ -42,6 +44,8 @@
         "express": "^4.21.2",
         "formidable": "^3.5.2",
         "framer-motion": "^12.14.0",
+        "glob": "^11.0.2",
+        "lru-cache": "^11.1.0",
         "lucide-react": "^0.511.0",
         "luxon": "^3.4.4",
         "minisearch": "^6.3.0",
@@ -56,6 +60,7 @@
         "react-hook-form": "^7.51.3",
         "react-icons": "^5.0.1",
         "react-redux": "^9.2.0",
+        "rimraf": "^6.0.1",
         "socket.io": "^4.8.1",
         "socket.io-client": "^4.8.1",
         "sonner": "^1.7.4",
@@ -79,7 +84,7 @@
         "@typescript-eslint/eslint-plugin": "^8.33.0",
         "@typescript-eslint/parser": "^8.33.0",
         "concurrently": "^8.2.2",
-        "eslint": "^8",
+        "eslint": "^9.27.0",
         "eslint-config-next": "^15.3.2",
         "nodemon": "^3.1.10",
         "postcss": "^8",
