--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.51.3",
+        "react-hot-toast": "^2.5.2",
         "react-icons": "^5.0.1",
         "react-redux": "^9.2.0",
         "rimraf": "^6.0.1",
